<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:background="@color/bg_white"
              android:elevation="2dp"
              android:gravity="center_vertical"
              android:orientation="horizontal">

    <Button
        android:id="@+id/act_home_btn_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/selector_act_home_btn_home"
        android:paddingTop="5dp"
        android:text="@string/act_home_bottom_index"
        android:textColor="@drawable/selector_act_home_btn_text_color"
        android:textSize="@dimen/tv_Normal"/>

    <Button
        android:id="@+id/act_home_btn_category"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/selector_act_home_btn_category"
        android:paddingTop="5dp"
        android:text="@string/act_home_bottom_category"
        android:textColor="@drawable/selector_act_home_btn_text_color"
        android:textSize="@dimen/tv_Normal"/>


    <Button
        android:id="@+id/act_home_btn_shopcar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:clickable="true"
        android:drawableTop="@drawable/selector_act_home_btn_shop_car"
        android:paddingTop="5dp"
        android:text="@string/act_home_bottom_cart"
        android:textColor="@drawable/selector_act_home_btn_text_color"
        android:textSize="@dimen/tv_Normal"/>

    <Button
        android:id="@+id/act_home_btn_mine"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/selector_act_home_btn_my"
        android:paddingTop="5dp"
        android:text="@string/act_home_bottom_mine"
        android:textColor="@drawable/selector_act_home_btn_text_color"
        android:textSize="@dimen/tv_Normal"/>
</LinearLayout>