<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:background="@color/colorTransparency_H"
                                     android:orientation="vertical">

    <TextView
        android:id="@+id/btnSortDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/bg_white"
        android:drawableLeft="@drawable/text_btn_check_mark"
        android:drawablePadding="10dp"
        android:gravity="left"
        android:text="@string/com_sort"
        android:textColor="@drawable/text_btn_color"
        android:textSize="@dimen/tv_Normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:background="@color/normal_bg"/>

    <TextView
        android:id="@+id/btnSortHon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/bg_white"
        android:drawableLeft="@drawable/text_btn_check_mark"
        android:drawablePadding="10dp"
        android:text="@string/hon_sort"
        android:textColor="@drawable/text_btn_color"
        android:textSize="@dimen/tv_Normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/normal_bg"/>

    <TextView
        android:id="@+id/btnSortPriceL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:drawableLeft="@drawable/text_btn_check_mark"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/price_up"
        android:textColor="@drawable/text_btn_color"
        android:textSize="@dimen/tv_Normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/bg_gray"/>

    <TextView
        android:id="@+id/btnSortPriceU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/bg_white"
        android:drawableLeft="@drawable/text_btn_check_mark"
        android:drawablePadding="10dp"
        android:text="@string/price_down"
        android:textColor="@drawable/text_btn_color"
        android:textSize="@dimen/tv_Normal"/>

</LinearLayout>
