<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:background="@color/bg_white"
              android:orientation="horizontal"
              android:padding="6dp">

    <LinearLayout
        android:id="@+id/ll_eva_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_eva_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/all_ave"
            android:textColor="@drawable/selector_act_home_btn_text_color"
            android:textSize="@dimen/tv_light"/>

        <TextView
            android:id="@+id/tv_eva_all_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:text="120"
            android:textColor="@drawable/selector_act_home_btn_text_color"
            android:textSize="@dimen/tv_light"/>


    </LinearLayout>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/colorLine"/>

    <LinearLayout
        android:id="@+id/ll_eva_good"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_eva_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/good_ave"
            android:textColor="@drawable/selector_act_home_btn_text_color"
            android:textSize="@dimen/tv_light"/>

        <TextView
            android:id="@+id/tv_eva_good_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:text="93"
            android:textColor="@drawable/selector_act_home_btn_text_color"
            android:textSize="@dimen/tv_light"/>


    </LinearLayout>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/colorLine"/>

    <LinearLayout
        android:id="@+id/ll_eva_med"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_eva_med"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/med_ave"
            android:textColor="@drawable/selector_act_home_btn_text_color"
            android:textSize="@dimen/tv_light"/>

        <TextView
            android:id="@+id/tv_eva_med_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:text="120"
            android:textColor="@drawable/selector_act_home_btn_text_color"
            android:textSize="@dimen/tv_light"/>


    </LinearLayout>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/colorLine"/>

    <LinearLayout
        android:id="@+id/ll_eva_bad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_eva_bad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/bad_ave"
            android:textColor="@drawable/selector_act_home_btn_text_color"
            android:textSize="@dimen/tv_light"/>

        <TextView
            android:id="@+id/tv_eva_bad_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:text="120"
            android:textColor="@drawable/selector_act_home_btn_text_color"
            android:textSize="@dimen/tv_light"/>


    </LinearLayout>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/colorLine"/>

    <LinearLayout
        android:id="@+id/ll_eva_pic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_eva_pic"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pic_ave"
            android:textColor="@drawable/selector_act_home_btn_text_color"
            android:textSize="@dimen/tv_light"/>

        <TextView
            android:id="@+id/tv_eva_pic_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:text="120"
            android:textColor="@drawable/selector_act_home_btn_text_color"
            android:textSize="@dimen/tv_light"/>


    </LinearLayout>


</LinearLayout>